# jdisrest

./: .gitattributes  .gitignore  .zenodo.json  CITATION.cff  README.md  pom.xml
docs/: DEVELOPER_MANUAL.md
python/: README.md  pyproject.toml
python/jdisrest/: __init__.py  _types.py  _worker.py
src/main/java/es/unex/jdisrest/distributed/: AbstractMaster.java  AlgorithmFinishedException.java  GenerationalAlgorithm.java  GenerationalMaster.java  RestWorker.java  SteadyStateAlgorithm.java  SteadyStateEvolutionaryAlgorithm.java  SteadyStateMaster.java  WarmStartCapable.java
src/main/java/es/unex/jdisrest/distributed/algorithms/steadystate/: MOEAD.java  NSGAII.java  SMSEMOA.java
src/main/java/es/unex/jdisrest/distributed/rest/: MasterFacade.java  MasterSpringApp.java  StatusController.java  StatusSnapshot.java  TaskController.java  WatchdogScheduler.java  WorkerController.java
src/main/java/es/unex/jdisrest/distributed/rest/dto/: TaskErrorPayload.java  TaskPayload.java  (+1 more)
src/main/java/es/unex/jdisrest/local/: PythonProcessEvaluator.java  PythonSolutionListEvaluator.java
src/main/java/es/unex/jdisrest/local/algorithms/: NSGAII.java
src/main/java/es/unex/jdisrest/operator/: DifferentialEvolutionSelection.java  IntegerBLXCrossover.java  IntegerGaussianMutation.java  IntegerSimpleRandomMutation.java  NaryTournamentSelection.java  PolynomialMutationRandomProbability.java  RandomMutationWithRandomProbability.java  SafeCompositeCrossover.java
src/main/java/es/unex/jdisrest/util/: CompositeSolutionListOutput.java  Log.java  Timings.java  TraceWriter.java
