[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jdisrest"
version = "1.0.0"
description = "Python client for the jdisrest distributed evolutionary optimization framework"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [{ name = "Jesús Galeano Brajones", email = "jgaleanobra@unex.es" }]
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest", "responses"]

[tool.setuptools.packages.find]
where = ["."]
include = ["jdisrest*"]
